fix relay button alignment

--- a/js/frontend/src/pages/transaction/transaction.module.scss
+++ b/js/frontend/src/pages/transaction/transaction.module.scss
@@ -6,6 +6,7 @@
   margin-bottom: 32px;
 
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 16px;
 
@@ -26,8 +27,6 @@
   }
 
   .sidebar {
-    align-self: flex-start;
-
     display: flex;
     flex-direction: column;
     gap: 8px;
